# aerospace-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  DEPLOYMENT.md  Dockerfile  PRD.md  README.md  TESTING.md  docker-compose.yml  index.html  main.py  pyproject.toml  requirements-vercel.txt  requirements.txt  ruff.toml  run_server_example.py  run_tests.py  vercel.json
.github/workflows/: ci.yml
aerospace_mcp/: __init__.py  cli.py  core.py  fastmcp_server.py  server.py
aerospace_mcp/integrations/: __init__.py  _array_backend.py  aero.py  atmosphere.py  frames.py  gnc.py  orbits.py  propellers.py  propellers_temp.py  rockets.py  trajopt.py
aerospace_mcp/tools/: __init__.py  aerodynamics.py  agents.py  atmosphere.py  core.py  frames.py  gnc.py  optimization.py  orbits.py  performance.py  propellers.py  rockets.py  tool_search.py
api/: index.py
app/: __init__.py  main.py
docs/: AGENTS.md  AGENT_TOOLS.md  AIRCRAFT_PROPELLER_GUIDE.md  API.md  ARCHITECTURE.md  ATMOSPHERE_FRAMES_GUIDE.md  CONTRIBUTING.md  DEPLOYMENT.md  IDEAS.md  INTEGRATION.md  MCP_INTEGRATION.md  PRD.md  QUICKSTART.md  ROCKETS_TRAJOPT_GUIDE.md  TESTING.md
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
skills/: aerodynamics.md  aerospace-tools.md  aircraft-performance.md  atmosphere.md  flight-planning.md  orbital-mechanics.md  rockets.md
tests/: __init__.py  conftest.py  test_agent_tools.py  test_airports.py  test_app_entry.py  test_cli.py  test_core_coverage.py  test_fastmcp.py  test_health.py  test_integrations_aero.py  test_integrations_array_backend.py  test_integrations_atmosphere.py  test_integrations_coverage.py  test_integrations_frames.py  test_integrations_gnc.py  test_integrations_orbits.py  test_integrations_propellers.py  test_integrations_rockets.py  test_integrations_trajopt.py  test_mcp.py  test_mcp_protocol_smoke.py  test_mcp_transport.py  test_plan.py  test_server_entry_points.py  test_tool_schema_contracts.py  test_tool_search.py
tests/tools/: conftest.py  test_tools_aerodynamics.py  test_tools_agents.py  test_tools_atmosphere.py  test_tools_common.py  test_tools_core_tools.py  test_tools_frames.py  test_tools_gnc.py  test_tools_lambert.py  test_tools_optimization.py  test_tools_orbits.py  test_tools_performance.py  test_tools_propellers.py  test_tools_rockets.py
